add create users

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,9 @@
     "forceConsistentCasingInFileNames": true, 
     "baseUrl": ".",
     "paths": {
-      "@providers/*": ["./src/providers/*"],
-      "@useCases/*": ["./src/useCases/*"]
+      "@config/*": ["./src/config/*"],
+      "@modules/*": ["./src/modules/*"],
+      "@shared/*": ["./src/shared/*"]
     }      
   },
   "include": [
