--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.0",
     "class-transformer": "^0.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
